added home app to settings

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    <title>Personal - Aidys Mongush</title>
+    <title>Home - Aidys Mongush</title>
 {% endblock title %}
 
 {% block content %}
@@ -157,7 +157,7 @@
                         <p class="lead fw-light mb-4">Меня зовут Айдыс Монгуш и я помогаю брендам расти.</p>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit dolorum itaque qui unde quisquam consequatur autem. Eveniet quasi nobis aliquid cumque officiis sed rem iure ipsa! Praesentium ratione atque dolorem?</p>
                         <div class="d-flex justify-content-center fs-2 gap-4">
-                            <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
+                            <a class="text-gradient" href="#!"><i class="bi bi-telegram"></i></a>
                             <a class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
                             <a class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
                         </div>
