--- a/templates/home.html
+++ b/templates/home.html
@@ -17,8 +17,8 @@
                         <div class="fs-3 fw-light text-muted">I can help your business to</div>
                         <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Get online and grow fast</span></h1>
                         <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                            <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Resume</a>
-                            <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Projects</a>
+                            <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="{% url 'resume' %}">Resume</a>
+                            <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="{% url 'projects' %}">Projects</a>
                         </div>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
                     <div class="text-center my-5">
                         <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">Обо Мне</span></h2>
                         <p class="lead fw-light mb-4">Меня зовут Айдыс Монгуш и я помогаю брендам расти.</p>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit dolorum itaque qui unde quisquam consequatur autem. Eveniet quasi nobis aliquid cumque officiis sed rem iure ipsa! Praesentium ratione atque dolorem?</p>
+                        <p class="text-muted">Родился в г. Чадан Республики Тыва Российской Федерации 10 января 1979 года. Детство прошло в г. Ак-Довурак и среднюю школу окончил в столице Республики г. Кызыле в 1996 г. Далее поступил в Академию гражданской защиты МЧС России и обучался до 2003 г. по специальности "Прикладная математика".</p>
                         <div class="d-flex justify-content-center fs-2 gap-4">
                             <a class="text-gradient" href="#!"><i class="bi bi-telegram"></i></a>
                             <a class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
